fixing spacing between project elements

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
   text-align: center;
 }
 
-p {
+h3 {
   text-align: center;
 }
 
@@ -64,6 +64,12 @@ p {
   width: 100%;
   justify-content: space-around;
   display: flex;
+  flex-wrap: wrap;
+}
+
+.project {
+  width: 100px;
+  text-align: center;
 }
 li {
   list-style: none;
